--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-    "name": "Veez Music Bot",
-    "logo": "https://telegra.ph/file/9dd9b20abcda2d7bb6725.png",
-    "description": "veez music allow you to stream music trought the telegram voice chat feature.",
+    "name": "Rocks Music Bot",
+    "logo": "https://telegra.ph/file/1b3ae71e07bcbe85db161.jpg",
+    "description": "Rocks Music Allow You To Streaming Music Through The Telegram Voice Chat Feature By Asad Ali.",
     "keywords": ["music", "voice chat", "telegram"],
-    "repository": "https://github.com/levina-lab/veezmusic",
+    "repository": "https://github.com/jankarikiduniya/RockesMusic",
     "stack": "container",
     "env": {
         "SESSION_NAME": {
@@ -42,17 +42,17 @@
         "ASSISTANT_NAME": {
             "description": "fill with the assistant username without @",
             "required": true,
-            "value": "veezasisstant"
+            "value": "Asad_Music_Bot"
         },
         "BG_IMAGE": {
             "description": "fill with your costum background image link",
             "required": false,
-            "value": "https://telegra.ph/file/20147c4f049e2c1f2f248.png"
+            "value": "https://telegra.ph/file/482fd875d8https://telegra.ph/file/482fd875d88ed43f4ad13.jpg8ed43f4ad13.jpg"
         },
         "OWNER_NAME": {
             "description": "fill with your username without @",
             "required": false,
-            "value": "dlwrml"
+            "value": "Dr_Asad_Ali"
         },
         "API_ID": {
             "description": "your Api ID from my.telegram.org/apps",
@@ -74,7 +74,7 @@
         "UPDATES_CHANNEL": {
             "description": "if you have channel fill the channel username here without @",
             "required": false,
-            "value": "levinachannel"
+            "value": "jankarikiduniya"
         },
         "GROUP_SUPPORT": {
             "description": "if you have group fill the group username here without @",
