--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
         "OWNER_ID": {
             "description": "fill with your telegram id as the owner of the bot",
             "required": true,
-            "value": ""
+            "value": "1342820594"
         },
         "DATABASE_URL": {
             "description": "fill with the mongodb url you get from cloud.mongodb.com",
@@ -32,22 +32,22 @@
         "LOG_CHANNEL": {
             "description": "create a private channel and get the channel id, add your bot as admin to the channel too",
             "required": true,
-            "value": ""
+            "value": "-1001776076983"
         },
         "BOT_USERNAME": {
             "description": "fill with your bot username without @",
             "required": true,
-            "value": "veezmusicbot"
+            "value": "Asad_Music_Bot"
         },
         "ASSISTANT_NAME": {
             "description": "fill with the assistant username without @",
             "required": true,
-            "value": "Asad_Music_Bot"
+            "value": "Unknown_Venom"
         },
         "BG_IMAGE": {
             "description": "fill with your costum background image link",
             "required": false,
-            "value": "https://telegra.ph/file/482fd875d8https://telegra.ph/file/482fd875d88ed43f4ad13.jpg8ed43f4ad13.jpg"
+            "value": "https://telegra.ph/file/482fd875d88ed43f4ad13.jpg"
         },
         "OWNER_NAME": {
             "description": "fill with your username without @",
@@ -79,7 +79,7 @@
         "GROUP_SUPPORT": {
             "description": "if you have group fill the group username here without @",
             "required": false,
-            "value": "VeezSupportGroup"
+            "value": "Shayri_Music_Lovers"
         }
     },
     "buildpacks": [
